--- a/FrontEnd/barberapp/package.json
+++ b/FrontEnd/barberapp/package.json
@@ -9,7 +9,10 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.0",
     "formik": "^2.2.9",
+    "google-map-react": "^2.1.10",
+    "google-maps-js-api-react": "^1.1.0",
     "react": "^17.0.2",
+    "react-calendar": "^3.7.0",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
